# k8s-resource-analyzer

./: CHANGELOG.md  README.md  pyproject.toml
dev/test-case/: example.yaml  example2.yaml
docs/: PROJECT.md
src/: custom_classes.py  data.py  formatting.py  k8s_resource_analyzer.py  k8s_resource_bot.py  resource_analyzer.py  shared_configs.py
src/k8s_resource_analyzer/: data.py  formatting.py  k8s_resource_analyzer.py  resource_analyzer.py  shared_configs.py
